# p2p-polling

./: .gitignore  HANDOFF.md  README.md
core/: CMakeLists.txt  flake.nix  metadata.json
core/src/: polling_core_interface.h  polling_core_plugin.cpp  polling_core_plugin.h
core/vote-bridge/: Cargo.toml
core/vote-bridge/src/: main.rs
ui/: CMakeLists.txt  flake.nix  metadata.json
ui/src/: polling_ui.rep  polling_ui_interface.h  polling_ui_plugin.cpp  polling_ui_plugin.h
ui/src/qml/: Main.qml
