[package]
name = "vote-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vote-bridge"
path = "src/main.rs"

[dependencies]
lb-zone-sdk = { package = "logos-blockchain-zone-sdk", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
lb-core = { package = "logos-blockchain-core", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
lb-key-management-system-keys = { package = "logos-blockchain-key-management-system-keys", git = "https://github.com/logos-blockchain/logos-blockchain", tag = "0.1.2" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
